# agente_erpnext_G

./: .env  README.md  agent.py  config.py  ingest.py  main.py  pyproject.toml  vector_store.py  watcher.py
info_erp/apps/bank_type/: bank_type.js  bank_type.json  bank_type.py  test_bank_type.py
info_erp/apps/job_position/: job_position.js  job_position.json  job_position.py  test_job_position.py
info_erp/apps/occupational_category/: occupational_category.js  occupational_category.json  occupational_category.py  test_occupational_category.py
info_erp/documentacion/: S5Next-Módulo CubaHR Nómina.md  procesos_bancarios.md
storage_vectorial/: default__vector_store.json  docstore.json  index_store.json
